--- a/index.html
+++ b/index.html
@@ -5,95 +5,97 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style-index.css">
-  <!-- BOOTSTRAP -->
+  <link rel="icon" type="image" href="../public/images/logo.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <!-- fontawesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" >
-
-  <title>TIENDA SALUDABLE</title>
+  <link rel="stylesheet" href="./css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <title>Vida Equilibrada</title>
 </head>
 
 <body>
   <header>
-    <nav class="navbar bg-dark" data-bs-theme="dark">
-      <div class="container">
-        <div class="navbar-brand">
-          <img src="#" alt="LOGO">
+    <div class="img1">
+      <img src="./images/globo.jpg" alt="" height="180px" width="310px">
+    </div>
+    <nav class="mx-auto navbar navbar-expand-lg bg-body-tertiary custom-menu">
+      <div class="container-fluid">
+        <div class="img2">
+          <img src="./images/globo2.jpg" alt="" height="100px" width="200px">
         </div>
-        <ul class="nav nav-pills">
-          <li class="nav-item">
-            <a class="nav-link enlaceNav" href="#" id="home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link enlaceNav" href="#" id="">FRUTOS SECOS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link enlaceNav" href="#" id="">MERIENDAS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="">BEBIDAS/a>
-            
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="">OTROS</a>
-          </li>
-        </ul>
+        <button class="navbar-toggler botonColor" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="mx-auto collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul id="alineado" class="mx-auto navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item estiloA">
+              <a class="button nav-link" id="inicio">INICIO</a>
+            </li>
+            <li class="nav-item estiloB" >
+              <a class="button nav-link" id="alimentosOrganicos">ALIMENTOS ORGANICOS</a>
+            </li>
+            <li class=" nav-item estiloC">
+              <a class="button nav-link" id="productosSinLactosa">PRODUCTOS SIN LACTOSA</a>
+            </li>
+            <li class=" nav-item estiloD">
+              <a class="button nav-link" id="suplementosNaturales">SUPLEMENTOS NATURALES</a>
+            </li>
+            <li class=" nav-item estiloE">
+              <a class="button nav-link" id="hogar">HOGAR</a>
+            </li>
+            <li class=" nav-item estiloF">
+              <a class="button nav-link" id="contact">CONTACTO</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
-
-
   </header>
   <main>
-    <!-- ENCABEZADO DE NAVEGACION ENTRE PAGINAS -->
-    <div class="navegacion" id="secNavDos">
-      <div class="navegacionHeaderDos ">
-        <a id="enlaceIzq"><i class="fa-solid fa-angle-left"></i></a>
-        <div class="contenedorTextoDDD"><p class="textoDDD" id="tituloCarousel"></p></div>
-        <a id="enlaceDer"><i class="fa-solid fa-angle-right"></i></a>
+    <!-- CARRUSEL -->
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./images/fotA.webp" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./images/fotB.webp" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./images/fotC.webp" class="d-block w-100" alt="...">
+        </div>
       </div>
-
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <!-- CATEGORIAS  -->
-    <nav class="navbar navbar-main">
-      <div class="container-fluid" id="check"></div>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Busca tu producto" aria-label="Search" id="search">
-        <button class="btn btn-outline-success" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-      </form>
 
-    </nav>
-    <!-- CARTAS DE EVENTOS Y DETALLES-->
-    <div class="row row-cols-auto grupo" id="cartasDeProductos"></div>
-    <div class="card card-detalle mb-3" id="detallesDeLosProductos"></div>
+    <!-- MAP -->
+    <div id="mapau">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8642497583137!2d-58.387166925130195!3d-34.607594057701455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac5466ccb9b%3A0x57419e9c86945b8f!2sBartolom%C3%A9%20Mitre%201280%2C%20C1036AAX%20CABA!5e0!3m2!1ses!2sar!4v1685136060146!5m2!1ses!2sar" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
   </main>
-  
-  <footer class="bg-dark">
-    <div class="footer-content">
-      <div class="redes">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-square-instagram"></i>
-        <i class="fa-brands fa-square-whatsapp"></i>
-      </div>
-      <div class="favicon"><p></p><img src="./images/favicon.png" alt="logo favicon"></div>
-    </div>
+
+  <footer>
+    <a class="pequenioEspacio" href="https://www.facebook.com/" target="_blank">
+      <img src="https://img.icons8.com/fluency/55/null/facebook.png" />
+    </a>
+    <a class="pequenioEspacio" href="https://www.instagram.com/" target="_blank">
+      <img src="https://img.icons8.com/fluency/55/null/instagram-new.png" />
+    </a>
   </footer>
 
-  
-
-
-  <!-- SCRIPT BOOTSTRAP -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
+  integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+  </script>
+<script src="./javascript/index.js"></script>
 
-  <!-- SCRIPTS DE LA PAGINA -->
-  <script src="./javascript/index.js"></script>
-  
-  
 </body>
-
 </html>
