--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,31 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
   </script>
+
+  <!-- SCRIPTS PARA ENLAZAR CON FIREBASE -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
+  <script>
+   
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyCU3a0uOIuvHV2dfWCQ-zc2gynC5f93YAo",
+      authDomain: "vidaequilibrada-dc1b1.firebaseapp.com",
+      projectId: "vidaequilibrada-dc1b1",
+      storageBucket: "vidaequilibrada-dc1b1.appspot.com",
+      messagingSenderId: "115371584191",
+      appId: "1:115371584191:web:6c564adf941de2f795f40a",
+      measurementId: "G-99WNEK5R57"
+    };
+  
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore()
+  </script>
 <script src="./javascript/index.js"></script>
 
 </body>
