--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image" href="../public/images/logo.jpg">
+  <link rel="icon" type="image" href="./images/logo.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/productos.css">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <title>Vida Equilibrada</title>
 </head>
@@ -33,7 +37,7 @@
             <li class="nav-item estiloA">
               <a class="button nav-link" id="inicio">INICIO</a>
             </li>
-            <li class="nav-item estiloB" >
+            <li class="nav-item estiloB">
               <a class="button nav-link" id="alimentosOrganicos">ALIMENTOS ORGANICOS</a>
             </li>
             <li class=" nav-item estiloC">
@@ -79,9 +83,18 @@
 
     <!-- MAP -->
     <div id="mapau">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8642497583137!2d-58.387166925130195!3d-34.607594057701455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac5466ccb9b%3A0x57419e9c86945b8f!2sBartolom%C3%A9%20Mitre%201280%2C%20C1036AAX%20CABA!5e0!3m2!1ses!2sar!4v1685136060146!5m2!1ses!2sar" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8642497583137!2d-58.387166925130195!3d-34.607594057701455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac5466ccb9b%3A0x57419e9c86945b8f!2sBartolom%C3%A9%20Mitre%201280%2C%20C1036AAX%20CABA!5e0!3m2!1ses!2sar!4v1685136060146!5m2!1ses!2sar"
+        width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </main>
+
+  <!-- CARTAS DE PRODUCTOS -->
+  <section id="seccionProductos">
+    <p class="tituloSeccion" id="tituloSec"></p>
+    <div class="row row-cols-auto" id="productosDietetica"></div>
+  </section>
 
   <footer>
     <a class="pequenioEspacio" href="https://www.facebook.com/" target="_blank">
@@ -92,18 +105,16 @@
     </a>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-  </script>
+
 
   <!-- SCRIPTS PARA ENLAZAR CON FIREBASE -->
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
   <script>
-   
+
     // https://firebase.google.com/docs/web/setup#available-libraries
-  
+
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
@@ -115,12 +126,18 @@
       appId: "1:115371584191:web:6c564adf941de2f795f40a",
       measurementId: "G-99WNEK5R57"
     };
-  
+
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore()
+    const db = firebase.firestore();
   </script>
-<script src="./javascript/index.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+    </script>
+
+  <script src="./javascript/index.js"></script>
 
 </body>
+
 </html>
