agregando seccion de detalles html y js

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/productos.css">
+  <link rel="stylesheet" href="./css/detalle.css">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <title>Vida Equilibrada</title>
 </head>
@@ -95,6 +96,8 @@
     <p class="tituloSeccion" id="tituloSec"></p>
     <div class="row row-cols-auto" id="productosDietetica"></div>
   </section>
+  <!-- CARTAS DE DETALLES -->
+  <section id="detalleProducto">  </section>
 
   <footer>
     <a class="pequenioEspacio" href="https://www.facebook.com/" target="_blank">
@@ -137,6 +140,7 @@
     </script>
 
   <script src="./javascript/index.js"></script>
+  <script src="./javascript/detalleProducto.js"></script>
 
 </body>
 
