--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer" />  
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/productos.css">
   <link rel="stylesheet" href="./css/detalle.css">
@@ -98,6 +98,7 @@
   </section>
   <!-- CARTAS DE DETALLES -->
   <section id="detalleProducto">  </section>
+  <section id="contacto"></section>
 
   <footer>
     <a class="pequenioEspacio" href="https://www.facebook.com/" target="_blank">
@@ -138,9 +139,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
     </script>
-
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="./javascript/index.js"></script>
   <script src="./javascript/detalleProducto.js"></script>
+  <script src="./javascript/contacto.js"></script>
 
 </body>
 
