ajustando js de carrito

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/productos.css">
   <link rel="stylesheet" href="./css/detalle.css">
+  <link rel="stylesheet" href="./css/compras.css">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <title>Vida Equilibrada</title>
 </head>
@@ -97,7 +98,25 @@
     <div class="row row-cols-auto" id="productosDietetica"></div>
   </section>
   <!-- CARTAS DE DETALLES -->
-  <section id="detalleProducto">  </section>
+  <section id="detalleProducto"> </section>
+
+  <!-- SECCION DE COMPRAS -->
+  <section class="compras" id="seccionCompras">
+    <div class="contenedor-compras">
+      <div id="compras" class="row row-cols-auto">
+      
+      </div>
+      <div id="carrito">
+        <div class="carrito">
+          <div class="carrito-header">
+            <p>Tu Carrito</p>
+          </div>
+          <div class="carrito-items" id="tuPedido"> </div>
+          <div class="carrito-footer" id="final"></div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <footer>
     <a class="pequenioEspacio" href="https://www.facebook.com/" target="_blank">
@@ -141,6 +160,8 @@
 
   <script src="./javascript/index.js"></script>
   <script src="./javascript/detalleProducto.js"></script>
+  <script src="./javascript/compras.js"></script>
+
 
 </body>
 
