--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/productos.css">
   <link rel="stylesheet" href="./css/detalle.css">
+  <link rel="stylesheet" href="./css/contacto.css">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <title>Vida Equilibrada</title>
 </head>
